--- a/views/list.ejs
+++ b/views/list.ejs
@@ -4,22 +4,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS -->
+  <link rel="stylesheet" href="/css/styles.css">
   <title>To Do List</title>
 </head>
 <body>
+  <div id="heading" class="box">
+    <h1><%= kindOfDay %></h1>
+  </div>
 
-  <h1><%= kindOfDay %></h1>
+  <div class="box">
+    <% for (let i=0; i<newListItems.length; i++){ %>
+    <div class="item">
+      <input type="checkbox">
+      <p><%= newListItems[i] %></p>
+    </div>
 
-  <ul>
-    <% newListItems.forEach(item => { %>
-      <li><%=item%></li>
-    <% }) %>
-  </ul>
+    <% } %>
 
-  <form class="" action="/" method="post">
-    <input type="text" name="newItem">
-    <button type="submit" name="button">Add</button>
-  </form>
-
+    <form class="item" action="/" method="post">
+      <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
+      <button type="submit" name="button">+</button>
+    </form>
+  </div>
 </body>
 </html>
