--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,8 +9,11 @@
   <title>To Do List</title>
 </head>
 <body>
+
+  <%- include("header"); -%>
+
   <div id="heading" class="box">
-    <h1><%= kindOfDay %></h1>
+    <h1><%= listTitle %></h1>
   </div>
 
   <div class="box">
@@ -24,8 +27,10 @@
 
     <form class="item" action="/" method="post">
       <input type="text" name="newItem" placeholder="New Item" autocomplete="off">
-      <button type="submit" name="button">+</button>
+      <button type="submit" name="list" value=<%= listTitle %>>+</button>
     </form>
   </div>
+
+  <%- include("footer"); -%>
 </body>
 </html>
